src/test/resources/failing/fail14.pnd
@type Animal
Animal(1)
